# fxbot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
docs/: filters.md  fxbot-concept.md  implementation-plan.md  metrics.md  migration.md  publication-policy.md  schema.md
scripts/: switch-env.sh
src/fxbot/: config.py  confluence.py  db.py  execution.py  heartbeat.py  logger.py  main.py  oanda_client.py  signal_bus.py  startup_checks.py
src/fxbot/filters/: exposure.py  market_hours.py  spread.py
src/fxbot/strategies/: base.py
tests/: test_confluence.py  test_db.py  test_execution.py  test_filters_exposure.py  test_filters_market_hours.py  test_filters_spread.py  test_heartbeat.py  test_main.py  test_no_execution_code.py  test_oanda_client.py  test_signal_bus.py  test_startup_checks.py
